# Agent-Driven-Observability

./: .dockerignore  .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  PROJECT_REVIEW.md  README.md  package.json  tsconfig.json  turbo.json
apps/agent-service/: .env.example  README.md  k8s-mcp.toml  pyproject.toml
apps/agent-service/src/agent_service/: __main__.py  app.py  config.py  context.py  db.py  escalation.py  hub.py  ingress.py  models.py  postmortem.py  precheck.py  settings.py  telemetry.py
apps/agent-service/src/agent_service/agents/: __init__.py  autofix.py  base.py  dashboard.py  echo.py  gitops.py  incident.py  oncall.py  rca.py  runbook.py
apps/agent-service/src/agent_service/tools/: __init__.py  backends.py  remediate.py  sdk.py  validation.py
apps/agent-service/tests/: test_auth.py  test_autofix.py  test_backends_gitea_put_file.py  test_backends_grafana.py  test_base.py  test_chat_resume.py  test_config.py  test_context.py  test_deploy_history.py  test_escalation.py  test_incident.py  test_ingress.py  test_k8s_tools.py  test_models.py  test_oncall_closing.py  test_orphaned_runs.py  test_postmortem.py  test_precheck.py  test_remediate.py  test_runbook_meta.py  test_sdk_tools.py  test_settings.py  test_validation.py
apps/dq-runner/: .env.example  Dockerfile  README.md  pyproject.toml
apps/dq-runner/src/dq_runner/: __init__.py  __main__.py  app.py  config.py  db.py  runner.py  schemas.py  state.py  telemetry.py
apps/dq-runner/src/dq_runner/checks/: __init__.py  cache_health.py  distribution.py  freshness.py  volume.py  (+1 more)
apps/dq-runner/tests/: test_cache_health.py  test_distribution.py  test_freshness.py  test_runner.py  test_schema.py  test_state.py  test_volume.py
(+378 files in other folders)
