[project]
name = "dq-runner"
version = "0.0.0"
description = "Scheduled data-quality checks for the AI Observability Lab (Phase 3)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "apscheduler>=3.10,<4",
  "psycopg[binary]>=3.2",
  "redis>=5.2",
  "scipy>=1.14",
  "opentelemetry-sdk>=1.29",
  "opentelemetry-exporter-otlp-proto-http>=1.29",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dq_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
